--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "webpack-hot-middleware": "^2.10.0"
   },
   "dependencies": {
+    "@reactivex/rxjs": "^5.0.0-rc.5",
     "co-body": "^4.0.0",
     "convict": "^1.2.0",
     "es6-promise": "^3.1.2",
@@ -91,10 +92,10 @@
     "react": "^15.4.0",
     "react-color": "^2.0.0",
     "react-dom": "^15.4.0",
-    "react-redux": "^4.4.6",
     "react-router": "^2.0.1",
     "redux": "^3.6.0",
     "redux-thunk": "^2.1.0",
+    "rxjs": "^5.0.0-rc.5",
     "superagent": "^1.8.3"
   }
 }
